--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    name: Test and build django-saml2-auth
+    name: Test and build django-saml2-no-jwt
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -59,20 +59,20 @@ jobs:
       - name: Generate CycloneDX SBOM artifacts 📃
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
-          cyclonedx-bom -r --format json -i requirements.txt -o cyclonedx-django-saml2-auth-${{ github.ref_name }}.json
-          cyclonedx-bom -r --format json -i requirements_test.txt -o cyclonedx-django-saml2-auth-test-${{ github.ref_name }}.json
+          cyclonedx-bom -r --format json -i requirements.txt -o cyclonedx-django-saml2-no-jwt-${{ github.ref_name }}.json
+          cyclonedx-bom -r --format json -i requirements_test.txt -o cyclonedx-django-saml2-no-jwt-test-${{ github.ref_name }}.json
       - name: Upload CycloneDX SBOM artifact for requirements.txt 💾
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: actions/upload-artifact@v3
         with:
-          name: cyclonedx-django-saml2-auth-${{ github.ref_name }}.json
-          path: cyclonedx-django-saml2-auth-${{ github.ref_name }}.json
+          name: cyclonedx-django-saml2-no-jwt-${{ github.ref_name }}.json
+          path: cyclonedx-django-saml2-no-jwt-${{ github.ref_name }}.json
       - name: Upload CycloneDX SBOM artifact for requirements_test.txt 💾
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: actions/upload-artifact@v3
         with:
-          name: cyclonedx-django-saml2-auth-test-${{ github.ref_name }}.json
-          path: cyclonedx-django-saml2-auth-test-${{ github.ref_name }}.json
+          name: cyclonedx-django-saml2-no-jwt-test-${{ github.ref_name }}.json
+          path: cyclonedx-django-saml2-no-jwt-test-${{ github.ref_name }}.json
       - name: Publish package to PyPI 🎉
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
